--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@
 }
 
 body {
+  height:100vh;
   background-color: aqua;
+  
 }
 .container{
  
@@ -17,6 +19,8 @@ body {
   margin: auto;
   margin-top:30px;
   height: 60vh;
+  padding :33px;
+  overflow-y:auto;
   border : 2px solid black;
   border-radius: 10px;;
 
