--- a/css/style.css
+++ b/css/style.css
@@ -8,40 +8,40 @@
 }
 
 body {
-  height:100vh;
-  background-color: aqua;
-  
+  height: 100vh;
+  background-image: url("https://images.pexels.com/photos/257360/pexels-photo-257360.jpeg?cs=srgb&dl=pexels-pixabay-257360.jpg&fm=jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
-.container{
- 
+.container {
   max-width: 955px;
-  background-color: lightblue;
+  /* background-color: lightblue; */
   margin: auto;
-  margin-top:30px;
+  margin-top: 30px;
   height: 60vh;
-  padding :10px;
-  overflow-y:auto;
-  border : 2px solid black;
-  border-radius: 10px;;
-
+  padding: 10px;
+  overflow-y: auto;
+  border: 2px solid black;
+  border-radius: 10px;
 }
 
 .message {
   background-color: gray;
-  width: 24%;
+  width: 40%;
   padding: 10px;
   margin: 17px 12px;
   border: 2px solid darkorchid;
   border-radius: 10px;
 }
-.message2{
+.message2 {
   background-color: lightgreen;
   width: 30%;
   height: auto;
   padding: 2px;
-  margin:auto;
+  margin: auto;
   text-align: center;
-  margin-top :10px;
+  margin-top: 10px;
   border: 2px solid darkorchid;
   border-radius: 8px;
 }
@@ -53,41 +53,37 @@ body {
   float: right;
   clear: both;
 }
-.middle{
+.middle {
   display: block;
-  clear:both;
+  clear: both;
   /* margin: auto; */
 }
 
-.send{
-    margin:10px;
+.send {
+  margin: 10px;
 }
 
-#send-container{
+#send-container {
+  display: block;
+  margin: auto;
 
-    display : block;
-    margin:auto;
-    
-    /* to center elements */
-    text-align : center;
-    max-width:1000px;
-    width:100%;
-
+  /* to center elements */
+  text-align: center;
+  max-width: 1000px;
+  width: 100%;
 }
 
-#messageInput
-{
-    margin-left:10px;
-    width: 90%;
-    border: 2px solid red;
-    border-radius: 10px;
-    height:34px;
+#messageInput {
+  margin-left: 10px;
+  width: 90%;
+  border: 2px solid red;
+  border-radius: 10px;
+  height: 34px;
 }
 
-.btn
-{
-    cursor:pointer;
-    border:2px solid black;
-    border-radius: 10px;
-    height: 34px;
+.btn {
+  cursor: pointer;
+  border: 2px solid black;
+  border-radius: 10px;
+  height: 34px;
 }
